--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
       <div class="row">
         <div class="col-xs-3">
           <div class="product-card">
-            <img class="product-card-image" src="images/bp-1.jpg">
-            <a href="#" class="product-name">Морковь «Просто Азбука»</a>
+            <a href="#"><img class="product-card-image" src="images/bp-1.jpg"></a>
+            <div class="product-name">Морковь «Просто Азбука»</div>
             <div class="product-card-price">
               <p class="product-card-price-old">.72</p>
               <p class="product-card-price-new">-.58<b>.50</b>
@@ -55,8 +55,8 @@
         </div>
         <div class="col-xs-3">
           <div class="product-card">
-            <img class="product-card-image" src="images/bp-2.jpg">
-            <a href="# " class="product-name">Чипсы «Rocer’s»</a>
+            <a href="#"><img class="product-card-image" src="images/bp-2.jpg"></a>
+            <div class="product-name">Чипсы «Rocer’s»</div>
             <div class="product-card-price">
               <p class="product-card-price-old">.140</p>
               <p class="product-card-price-new">-.78<b>.80</b>
@@ -66,8 +66,8 @@
         </div>
         <div class="col-xs-3">
           <div class="product-card">
-            <img class="product-card-image" src="images/bp-3.jpg">
-            <a href="#" class="product-name">Томаты<br>«На ветке»</a>
+            <a href="#"><img class="product-card-image" src="images/bp-3.jpg"></a>
+            <div class="product-name">Томаты<br>«На ветке»</div>
             <div class="product-card-price">
               <p class="product-card-price-old">.85</p>
               <p class="product-card-price-new">-.65<b>.00</b>
@@ -77,8 +77,8 @@
         </div>
         <div class="col-xs-3">
           <div class="product-card">
-            <img class="product-card-image" src="images/bp-4.jpg">
-            <a href="#" class="product-name">Сыр «Вьё Булонь»</a>
+            <a href="#"><img class="product-card-image" src="images/bp-4.jpg"></a>
+            <div class="product-name">Сыр «Вьё Булонь»</div>
             <div class="product-card-price">
               <p class="product-card-price-old">.480</p>
               <p class="product-card-price-new">-.420<b>.50</b>
@@ -111,20 +111,20 @@
     <footer class="footer">
       <div class="contacts">
         <div class="row">
-          <div class="col-xs-1">
+          <div class="col-xs-offset-1">
           </div>
           <div class="col-xs-5">
-            <p class="footer-contact-text"><b>Интернет-магазин:</b>прием заказа по<br>телефону<br>(с 9:00 до 21:00), вопросы организации<br>доставки (круглосуточно)</p>
-            <p class="footer-contact-text2"><b>+7 (495) 223-02-00</b></p>
+            <p class="footer-contact-text"><b>Интернет-магазин:</b>прием заказа по телефону (с 9:00 до 21:00), вопросы организации доставки (круглосуточно)</p>
+            <p class="footer-contact-text"><b>+7 (495) 223-02-00</b></p>
             <p><img class="footer-logo" src="images/logo-f.png"></p>
           </div>
 
           <div class="col-xs-5">
-            <p class="footer-contact-text">По вопросам и замечаниям на качество обращайтесь в Службу клиентской<br>поддержки<br>с 9:00 до 21:00 ежедневно</p>
-            <p class="footer-contact-text1"><b>+7 (495) 504-34-79<br>8 (800) 700-34-87</b></p>
-            <p class="footer-contact-text1">Офис с 9:00 до 18:00 по будням</p>
+            <p class="footer-contact-text">По вопросам и замечаниям на качество обращайтесь в Службу клиентской поддержки с 9:00 до 21:00 ежедневно</p>
+            <p class="footer-contact-text"><b>+7 (495) 504-34-79 8 (800) 700-34-87</b></p>
+            <p class="footer-contact-text">Офис с 9:00 до 18:00 по будням</p>
           </div>
-          <div class="col-xs-1">
+          <div class="col-xs-offset-1">
           </div>
         </div>
       </div>
