--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <div class="col-xs-3">
           <div class="product-card">
             <a href="#"><img class="product-card-image" src="images/bp-1.jpg"></a>
-            <div class="product-name">Морковь «Просто Азбука»</div>
+            <a href="#"><p class="product-name">Морковь «Просто Азбука»</p></a>
             <div class="product-card-price">
               <p class="product-card-price-old">.72</p>
               <p class="product-card-price-new">-.58<b>.50</b>
@@ -56,7 +56,7 @@
         <div class="col-xs-3">
           <div class="product-card">
             <a href="#"><img class="product-card-image" src="images/bp-2.jpg"></a>
-            <div class="product-name">Чипсы «Rocer’s»</div>
+            <a href="#"><p class="product-name">Чипсы «Rocer’s»</p></a>
             <div class="product-card-price">
               <p class="product-card-price-old">.140</p>
               <p class="product-card-price-new">-.78<b>.80</b>
@@ -67,7 +67,7 @@
         <div class="col-xs-3">
           <div class="product-card">
             <a href="#"><img class="product-card-image" src="images/bp-3.jpg"></a>
-            <div class="product-name">Томаты<br>«На ветке»</div>
+            <a href="#"><p class="product-name">Томаты<br>«На ветке»</p></a>
             <div class="product-card-price">
               <p class="product-card-price-old">.85</p>
               <p class="product-card-price-new">-.65<b>.00</b>
@@ -78,7 +78,7 @@
         <div class="col-xs-3">
           <div class="product-card">
             <a href="#"><img class="product-card-image" src="images/bp-4.jpg"></a>
-            <div class="product-name">Сыр «Вьё Булонь»</div>
+            <a href="#"><p class="product-name">Сыр «Вьё Булонь»</p></a>
             <div class="product-card-price">
               <p class="product-card-price-old">.480</p>
               <p class="product-card-price-new">-.420<b>.50</b>
@@ -91,19 +91,19 @@
       <div class="row">
         <div class="col-xs-6">
           <div class="category-panel1">
-            <p class="category-panel-title">Полуфабрикаты</p>
+            <a href="#"><p class="category-panel-title">Полуфабрикаты</p></a>
           </div>
         </div>
         <div class="col-xs-6">
           <div class="category-panel2">
-            <p class="category-panel-title">Легкие десерты</p>
+            <a href="#"><p class="category-panel-title">Легкие десерты</p></a>
           </div>
         </div>
       </div>
       <div class="row">
         <div class="col-xs-12">
           <div class="category-panel3">
-            <p class="category-panel-title">Наша продукция</p>
+            <a href="#"><p class="category-panel-title">Наша продукция</p></a>
           </div>
         </div>
       </div>
